Added Dictionary, Grammer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 	<script type="text/javascript" src="js/TokenClass.js"></script>
 	<script type="text/javascript" src="js/Token.js"></script>
 	<script type="text/javascript" src="js/lexicalAnalyzer.js"></script>
+	<script type="text/javascript" src="js/Dictionary.js"></script>
+	<script type="text/javascript" src="js/Grammer.js"></script>
+	<script type="text/javascript" src="js/Parser.js"></script>
+	<script type="text/javascript" src="js/Production.js"></script>
+	<script type="text/javascript" src="js/SLRTable.js"></script>
 
 	<script type="text/javascript" src="js/handler.js"></script>
 
